--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "eslint-loader": "^2.1.2",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.12",
